# Synapse

./: .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  SECURITY.md  clippy.toml  deny.toml  synapse-update.ps1
crates/synapse-a11y/: Cargo.toml
crates/synapse-a11y/examples/: cdp_action_probe.rs  cdp_click_node_fsv.rs  cdp_click_node_probe.rs  cdp_console_probe.rs  cdp_iframe_action_probe.rs  cdp_selector_engine_probe.rs
crates/synapse-a11y/src/: cdp.rs  cdp_action.rs  cdp_binding.rs  cdp_dialog.rs  cdp_dom.rs  cdp_emulation.rs  cdp_network.rs  error.rs  lib.rs  re_resolve.rs  snapshot.rs  tests.rs  window.rs
crates/synapse-a11y/src/platform/: non_windows.rs
crates/synapse-a11y/tests/: uwp_snapshot_regression.rs
crates/synapse-audio/: Cargo.toml
crates/synapse-audio/src/: error.rs  lib.rs
crates/synapse-capture/: Cargo.toml
crates/synapse-capture/benches/: capture_loop.rs
crates/synapse-capture/src/: controller.rs  lib.rs
crates/synapse-hid-host/: Cargo.toml
crates/synapse-hid-host/src/: error.rs  handshake.rs  lib.rs  pipeline.rs  protocol.rs  reconnect.rs  telemetry.rs  transport.rs
crates/synapse-hid-host/tests/: handshake.rs  scaffold.rs  telemetry.rs  transport.rs
crates/synapse-mcp/: Cargo.toml
crates/synapse-mcp/examples/: dump_agent_transcripts.rs
crates/synapse-mcp/src/: approval_protocol.rs  chrome_debugger_bridge.rs  connect.rs  local_agent.rs  m1.rs  m2.rs  m3.rs  m4.rs  main.rs  safety.rs  server.rs  single_instance.rs
crates/synapse-mcp/src/http/: auth.rs  mod.rs  session.rs  sse.rs  transport.rs
crates/synapse-mcp/src/m1/: ocr.rs  search.rs  sources.rs
crates/synapse-mcp/src/m2/: aim.rs  click.rs  clipboard.rs  drag.rs  focus_window.rs  pad.rs  postcondition.rs  press.rs  release_all.rs  scroll.rs  set_value.rs  stroke.rs  type_text.rs
crates/synapse-mcp/src/m3/: a11y_events.rs  activity_recorder.rs  armed_routines.rs  episodes.rs  hygiene.rs  intent.rs  interaction_cadence.rs  local_models.rs  permissions.rs  profile_authoring.rs  profile_quality.rs  profile_registry.rs  reflex.rs  routines.rs  storage.rs  subscribe.rs  suggestions.rs  tests.rs  timeline.rs  timeline_control.rs
crates/synapse-mcp/src/safety/: agreement.rs
crates/synapse-mcp/src/server/: action_audit.rs  action_preflight.rs  agent_control.rs  agent_cost.rs  agent_query.rs  agent_state.rs  agent_tasks.rs  agent_templates.rs  agent_transcripts.rs  ambient_agents.rs  audit_context.rs  background_router.rs  browser_assert.rs  browser_clock_events.rs  browser_dialog.rs  browser_emulate.rs  browser_emulation.rs  browser_network.rs  browser_storage.rs  codex_app_server_interrupt.ps1  codex_app_server_runner.ps1  command_audit.rs  context.rs  everquest_autocombat.rs  everquest_log.rs  everquest_route.rs  everquest_state.rs  everquest_tools.rs  everquest_ui_context.rs  handler.rs  health.rs  hygiene_report.rs  intent_tools.rs  lease_tools.rs  m1_tools.rs  m2_tools.rs  m3_tools.rs  m4_tools.rs  notify_tools.rs  permission_gate.rs  (+10 more)
crates/synapse-mcp/tests/: cli_modes.rs  health_tools_list.rs  lifecycle_windows.rs  m2_act_stroke_tool.rs  m2_click_fsv.rs  m2_file_menu_invoke_fsv.rs  m2_notepad_type_save.rs  m3_data_cleaning_tool.rs  m3_default_resolution.rs  m3_episode_query_tools.rs  m3_intent_current_tool.rs  m3_profile_tools.rs  m3_reflex_register_tool.rs  m3_routine_lifecycle_tool.rs  m3_storage_tool.rs  m3_subscribe_tool.rs  m3_timeline_control_tools.rs  m3_timeline_search_tool.rs  m3_tools_list.rs  m4_agent_templates_tool.rs  m4_no_foreground_action_gate.rs  m4_task_dispatch_tool.rs  m4_tools_list.rs  m5_curated_registry_tool.rs  m5_profile_quality_tool.rs  multi_agent_capability_matrix.rs
crates/synapse-mcp/tests/fixtures/: claude_session_real.jsonl  claude_stream_real.jsonl  codex_exec_real.jsonl
crates/synapse-mcp/tests/snapshots/: m3_default_resolution__m3_default_resolution.snap  m3_profile_tools__m3_profile_tools.snap  (+4 more)
crates/synapse-models/: Cargo.toml
crates/synapse-overlay/: Cargo.toml
crates/synapse-overlay/src/: main.rs
crates/synapse-perception/: Cargo.toml
crates/synapse-perception/benches/: observe_warm_a11y_only.rs  observe_warm_hybrid.rs  ocr_read_text.rs
crates/synapse-perception/src/: error.rs  event_extensions.rs  lib.rs  observe.rs  ocr.rs
crates/synapse-perception/tests/: cdp_diagnostics_regression.rs  event_extensions.rs  perception_fsv.rs  perception_regression.rs
crates/synapse-profiles/: Cargo.toml
crates/synapse-profiles/profiles/: acrobat.toml  calculator.toml  chrome.toml  cmd.toml  everquest.live.toml  excel.toml  explorer.toml  firefox.toml  iexplore.toml  luanti.minetest.toml  minecraft.java.toml  mstsc.toml  notepad.toml  onenote.toml  outlook.toml  paint.toml  photos.toml  powerpoint.toml  powershell.toml  settings.toml  slack.toml  snippingtool.toml  taskmanager.toml  teams.toml  terminal.toml  vscode.toml  word.toml  wordpad.toml  zoom.toml
crates/synapse-profiles/src/: parser.rs  resolver.rs  toml_format.rs
crates/synapse-profiles/tests/: package_manifest.rs  parse_bundled.rs  runtime_refresh.rs
crates/synapse-reflex/: Cargo.toml
crates/synapse-reflex/src/: bus.rs  conflict.rs  dispatch.rs  lib.rs  scheduler.rs  scheduler_handle.rs  scheduler_loop.rs  scheduler_tick.rs  storage.rs  tests.rs
crates/synapse-reflex/tests/: bus_behavior.rs  bus_fsv.rs  hold_move_behavior.rs  scheduler_behavior.rs
crates/synapse-storage/: Cargo.toml
crates/synapse-storage/benches/: batch_throughput.rs
crates/synapse-storage/src/: agent_transcripts.rs  batch_tests.rs  cf.rs  gc.rs  gc_tests.rs  lib.rs  open_tests.rs  pressure.rs  pressure_tests.rs  routines.rs  timeline.rs
crates/synapse-storage/tests/: batch_throughput.rs  compaction_ttl_proptest.rs  disk_pressure_4_levels_fsv.rs  gc_soft_cap_fsv.rs  open_all_cfs.rs
crates/synapse-telemetry/: Cargo.toml
crates/synapse-telemetry/src/: lib.rs
crates/synapse-telemetry/tests/: file_sink.rs
crates/synapse-test-utils/: Cargo.toml
crates/synapse-test-utils/src/: fixtures.rs  lib.rs  stdio_mcp_client.rs
(+215 files in other folders)
