[package]
name = "synapse-a11y"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
synapse-core = { path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
chromiumoxide.workspace = true
uiautomation.workspace = true
windows.workspace = true

[lints]
workspace = true
