[package]
name = "synapse-perception"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
synapse-core = { path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
