[package]
name = "synapse-profiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
notify.workspace = true
regex.workspace = true
serde.workspace = true
synapse-core = { path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true
