[package]
name = "synapse-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
sled-backend = ["dep:sled"]

[dependencies]
rocksdb = { workspace = true, features = ["lz4", "zstd", "multi-threaded-cf"] }
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sled = { workspace = true, optional = true }
synapse-core = { version = "0.1.0", path = "../synapse-core" }
synapse-telemetry = { version = "0.1.0", path = "../synapse-telemetry" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
metrics.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "batch_throughput"
harness = false

[lints]
workspace = true
