[package]
name = "synapse-test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
synapse-core = { path = "../synapse-core" }
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
